Update Avalon urls so we do not get redirected to insecure pages

--- a/interviews/weicker-cweicker.html
+++ b/interviews/weicker-cweicker.html
@@ -57,7 +57,7 @@
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
 		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
-        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/avalon:2925/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
+        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/w6634372w/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewees:</strong> Lowell P. Weicker, Jr., and Claudia T. Weicker<br>
         <strong>Interview Date:</strong> January 11, 2011<br>
         <strong>Interviewer:</strong> Phyllis Leffler<br>
