--- a/interviews/byrnes.html
+++ b/interviews/byrnes.html
@@ -57,7 +57,7 @@
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
 		<img src="../images/headshot-byrnes.jpg" class="full-width-img interview-portrait">
-        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/avalon:2959/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
+        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/2n49t188h/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Maureen Byrnes<br>
         <strong>Interview Date:</strong> April 13, 2010<br>
         <strong>Interviewer:</strong> Phyllis Leffler<br>
