--- a/interviews/cibes.html
+++ b/interviews/cibes.html
@@ -57,7 +57,7 @@
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
 		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
-        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/avalon:2929/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
+        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/fn106x97k/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> William J. Cibes<br>
         <strong>Interview Date:</strong> March 17, 2011<br>
         <strong>Interviewer:</strong> Phyllis Leffler<br>
