--- a/interviews/dotchin.html
+++ b/interviews/dotchin.html
@@ -57,7 +57,7 @@
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
 		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
-        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/avalon:2933/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
+        <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/9306sz32c/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Robert Dotchin<br>
         <strong>Interview Date:</strong> May 17, 2011<br>
         <strong>Interviewer:</strong> Phyllis Leffler<br>
