Added four headshots to People page.

--- a/people.html
+++ b/people.html
@@ -63,7 +63,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-claudia-weicker.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-cweicker.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
             <h4> <a href="people/cweicker.html">Claudia T. Weicker</a></h4>
@@ -75,7 +75,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-baker.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/baker.html"> Geoffrey Baker</a></h4>
@@ -125,7 +125,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-dotchin.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4> <a href="people/dotchin.html">Robert J. Dotchin</a></h4>
@@ -195,7 +195,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<img src="images/headshot-twardy.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/twardy.html">Stanley A. Twardy, Jr.</a></h4>
