Experiment with removing headshot image from People page.

--- a/people.html
+++ b/people.html
@@ -85,7 +85,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/balducci.html">Richard J. Balducci</a></h4>
