--- a/people.html
+++ b/people.html
@@ -105,7 +105,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/cibes.html">William J. Cibes, Jr.</a></h4>
@@ -115,7 +115,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/damore.html">Thomas D&rsquo;Amore</a></h4>
@@ -135,7 +135,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/doyle.html">John Doyle</a></h4>
@@ -145,7 +145,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
             <h4> <a href="people/elliott.html">Kimberly Elliott</a></h4>
@@ -155,7 +155,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/fauls.html">Meredith Fauls</a></h4>
@@ -165,7 +165,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/osborn.html">Timothy R. Osborn</a></h4>
@@ -185,7 +185,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/snider.html">Steven Snider</a></h4>
@@ -205,7 +205,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/west.html">Jane E. West, Ph.D.</a></h4>
@@ -215,7 +215,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">
+        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
             <h4><a href="people/wicklund.html">Robert I. Wicklund</a></h4>
