--- a/people/baker.html
+++ b/people/baker.html
@@ -58,7 +58,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img">
+        <img src="../images/headshot-baker.jpg" class="full-width-img">
           <h4 id="sidebar-first">Interview</h4>
           <p><a href="../interviews/baker.html"><img src="../images/interview.jpg" class="interview-image" > Geoffrey Baker</a><br>
             April 13, 2010<br>
