Added photos to the People page and individual bios. Removed placeholder blank graphic.

--- a/people.html
+++ b/people.html
@@ -105,7 +105,7 @@
 			<hr />
 		<div class="row">
     	<div class="col-sm-3 col-sm-push-9">
-        	<!--<img src="images/headshot-blank-thumb.jpg" class="eighty-percent-img">-->
+        	<img src="images/headshot-cibes.jpg" class="eighty-percent-img">
         </div><!-- /.col-sm-3 -->
       <div class="col-sm-9 col-sm-pull-3">
         <h4><a href="people/cibes.html">William J. Cibes, Jr.</a></h4>
