--- a/people/osborn.html
+++ b/people/osborn.html
@@ -59,7 +59,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img">
+        <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">&nbsp;</h4>
 </div> 
         <!-- /.com-md-3 -->
