--- a/people/twardy.html
+++ b/people/twardy.html
@@ -58,7 +58,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img">
+        <img src="../images/headshot-twardy.jpg" class="full-width-img">
           <h4 id="sidebar-first">Interview</h4>
           <p><a href="../interviews/twardy.html"><img src="../images/interview.jpg" class="interview-image" > Geoffrey Baker</a><br>
             <span class="interview-subhead">April 6, 2010</span><br>
