--- a/people/cibes.html
+++ b/people/cibes.html
@@ -58,7 +58,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img">
+        <img src="../images/headshot-cibes.jpg" class="full-width-img">
           <h4 id="sidebar-first">Interview</h4>
           <p><a href="../interviews/cibes.html"><img src="../images/interview.jpg" class="interview-image" > Cibes Interview</a><br>
             April 13,2010<br>Duration 1:29:28
