--- a/people/damore.html
+++ b/people/damore.html
@@ -56,7 +56,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img">
+        <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img">-->
           <h4 id="sidebar-first">Sources</h4>
           <ul>
             <li>Sources: NY Times 03/29/92</li>
