--- a/people/fauls.html
+++ b/people/fauls.html
@@ -56,7 +56,7 @@
         </div> <!-- /.col-md-9 -->
         
         <div class="col-md-3 lvl2-sidebar">
-        <img src="../images/headshot-blank-thumb.jpg" class="full-width-img"></div> 
+        <!--<img src="../images/headshot-blank-thumb.jpg" class="full-width-img"></div> -->
         <!-- /.com-md-3 -->
         
         </div> <!-- /.row -->
