Added photos to five interview pages. Removed blank photo placeholders from several other interview pages by commenting them out.

--- a/interviews/baker.html
+++ b/interviews/baker.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
+		<img src="../images/headshot-baker.jpg" class="full-width-img interview-portrait">
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/9w032307d/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Geoffrey Baker<br>
         <strong>Interview Date:</strong> April 13, 2010<br>
