--- a/interviews/doyle-west.html
+++ b/interviews/doyle-west.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
+		<!--<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">-->
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/vt150j39t/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewees:</strong> John Doyle and Jane E. West, Ph.D.<br>
           <strong>Interview Date:</strong> March 16, 2011<br>
