--- a/interviews/elliott.html
+++ b/interviews/elliott.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
+		<!--<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">-->
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/kw52j8156/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Kimberly Elliott<br>
         <strong>Interview Date:</strong> August 12, 2010<br>
