--- a/interviews/twardy.html
+++ b/interviews/twardy.html
@@ -56,7 +56,7 @@
         </div><!-- /.row -->
         <div class="row">
         <div class="col-sm-3 col-sm-push-9 lvl2-sidebar interview-details">
-		<img src="../images/interviews/blank.jpg" class="full-width-img interview-portrait">
+		<img src="../images/headshot-twardy.jpg" class="full-width-img interview-portrait">
         <div class="interview-embed-container"><iframe src="//avalon.lib.virginia.edu/master_files/0r9673887/embed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="interview-embed"></iframe></div>
         <p><strong>Interviewee:</strong> Stanley A. Twardy, Jr.<br>
         <strong>Interview Date:</strong> August 8, 2010<br>
