Fixing broken link from Weicker bio to joint interview with Claudia Weicker.

--- a/people/weicker.html
+++ b/people/weicker.html
@@ -83,7 +83,7 @@ Duration 1:23:12 </p>
           <p class="sidebar-interview"><a href="../interviews/weicker5.html"><img src="../images/interview.jpg" class="interview-image" > Weicker Interview Five</a><br>
 January 12, 2011<br>
 Duration 1:04:51 </p>
-          <p class="sidebar-interview"><a href="../interviews/baker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker Interview</a><br>
+          <p class="sidebar-interview"><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker Interview</a><br>
   January 11, 2011<br>
 Duration 1:40:34</p>
           <h4>Sources</h4>
