Fix link from Claudia Weicker bio to joint interview with L. P. Weicker.

--- a/people/cweicker.html
+++ b/people/cweicker.html
@@ -72,7 +72,7 @@
         <div class="col-md-3 lvl2-sidebar">
         <img src="../images/headshot-cweicker.jpg" class="full-width-img">
           <h4 id="sidebar-first">Interview</h4>
-          <p><a href="../interviews/baker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker</a><br>
+          <p><a href="../interviews/weicker-cweicker.html"><img src="../images/interview.jpg" class="interview-image" > Lowell and Claudia Weicker</a><br>
             January 11, 2011<br>
             Duration 1:40:34</p>
         </div> 
