Commented out timeline links on home page.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="/people.html" class="nav-border-right">People</a></li>
             <li><a href="/interviews.html" class="nav-border-right">Interviews</a></li>
             <li><a href="/issues.html" class="nav-border-right">Issues</a></li>
-            <li><a href="/timeline.html">Timeline</a></li>
+            <!--<li><a href="/timeline.html">Timeline</a></li>-->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -60,7 +60,7 @@
         <div class="col-md-9">
         <h4>About Lowell P. Weicker, Jr. </h4>
         <p>Lowell Weicker began his career as a public servant in 1962 in the Connecticut State House of Representatives. By 1968, he won election as the 4th District Congressman from Connecticut in the United States House of Representatives. After only one term, he successfully ran for the U.S. Senate, where he served for nearly two decades. In 1990, he returned to Connecticut to serve as its 85th Governor. </p>
-    <p><a href="people/weicker.html">Full Weicker Bio</a> | <a href="/timeline.html">Timeline of Life Events</a></p>
+    <p><a href="people/weicker.html">Full Weicker Bio</a> <!--| <a href="/timeline.html">Timeline of Life Events</a>--></p>
         </div><!-- /.col-md-9 -->
         </div><!-- /.row -->
         <div class="row">
