Styling tweak for home page.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/people.html" class="nav-border-right">People</a></li>
             <li><a href="/interviews.html" class="nav-border-right">Interviews</a></li>
-            <li><a href="/issues.html" class="nav-border-right">Issues</a></li>
+            <li><a href="/issues.html" <!--class="nav-border-right"-->>Issues</a></li>
             <!--<li><a href="/timeline.html">Timeline</a></li>-->
           </ul>
         </div><!--/.nav-collapse -->
