--- a/issues/politics-documents.html
+++ b/issues/politics-documents.html
@@ -39,8 +39,8 @@
             <li><a href="../index.html" class="nav-border-right">Home</a></li>
             <li><a href="/people.html" class="nav-border-right">People</a></li>
             <li><a href="/interviews.html" class="nav-border-right">Interviews</a></li>
-            <li><a href="/issues.html" class="nav-border-right">Issues</a></li>
-            <li><a href="/timeline.html">Timeline</a></li>
+            <li><a href="/issues.html"> <!--class="nav-border-right"-->Issues</a></li>
+            <!--<li><a href="/timeline.html">Timeline</a></li>-->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
