remove separate page for Watergate document 7 and insert the scan image as the second page of Watergate document 12

--- a/issues/watergate/document12.html
+++ b/issues/watergate/document12.html
@@ -52,7 +52,9 @@
       <p>Weicker Suggests Election for Head of Justice Department<br>
       July 15, 1974</p>
       <p>SOURCE: Watergate Box 35.</p>
-      		<img src="../../images/issues/watergate/12-1-full.jpg" class="full-width-img" alt="">
+      		<img src="../../images/issues/watergate/12-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
+			<img src="../../images/issues/watergate/7-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
+			<!-- editing note: the second page of this article was originally, and incorrectly, presented as separate document on the page document7.html -->
 
   </div><!-- /.container -->
 <footer>
