--- a/issues/watergate-documents.html
+++ b/issues/watergate-documents.html
@@ -80,10 +80,10 @@
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
           <!-- Add the extra clearfix for only the required viewport -->
 		  <div class="clearfix visible-md-block"></div>
-         <div class="col-sm-6 col-md-4 col-lg-3">
+        <!-- <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="watergate/document7.html"><img src="../images/issues/watergate/7-1-thumb.jpg" class="full-width-img" alt=""></a></div>
             <p class="full-width-img"><a href="watergate/document7.html">Watergate Bologna</a></p>
-        </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
+        </div> --><!-- /.col-sm-6 col-md-4 col-lg-3 --> 
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="watergate/document8.html"><img src="../images/issues/watergate/8-1-thumb.jpg" class="full-width-img" alt=""></a></div>
             <p class="full-width-img"><a href="watergate/document8.html">Watergate Handwritten Notes</a></p>
