add and correct citations

--- a/issues/aids/document4.html
+++ b/issues/aids/document4.html
@@ -52,7 +52,7 @@
       <p>Congressional Record Speech – Weicker speaks against Helms Amendment<br>
       October 14, 1987</p>
       <p><span class="work-title">Congressional Record</span> speech by Senator Weicker against an amendment introduced by Senator Helms. Helms argued that education to prevent AIDS endorses the &quot;homosexual agenda.&quot; Weicker rebutted Helms and negotiated the amendment to mitigate the language Helms originally intended. Even after negotiations and changing the language in the bill to be less homophobic and anti-gay, Senator Weicker refused to vote for the amendment, based on the Constitution, to protect every American and help prevent the spread of the deadly AIDS virus. In this Congressional Record, Weicker explained his reasoning and provided a synopsis of his philosophy and position on AIDS and his repeated lonely stance in the Senate during the 1980s.</p>
-      <p>SOURCE: Snider Box 34.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 865, Folder 20, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/aids/4-1-full.jpg" class="full-width-img" alt="Excerpts from the Congressional Record, Senate, featuring Mr. Weicker addressing the Chair">
       		<img src="../../images/issues/aids/4-2-full.jpg" class="full-width-img" alt="Excerpts from the Congressional Record, Senate, featuring Mr. Weicker addressing the Chair">
 
