--- a/issues/disabilities/document1.html
+++ b/issues/disabilities/document1.html
@@ -52,7 +52,7 @@
       <p>Senate Hearings on Mental Institution Abuse<br>
       April 2, 1985</p>
       <p> Newspaper special in The New York Times detailing the public witness testimony sessions about the quality and state of mental state institutions. Upon hearing the testimony, Senator Weicker commented that “this is the shame of America” and called for action. The article also mentions the 246- page staff report document their investigations about living conditions and treatment. </p>
-      <p>SOURCE: Elliott box 40.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 540, Folder 3, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/disabilities/1-1-full.jpg" class="full-width-img" alt=""></a>
 
   </div><!-- /.container -->
