--- a/issues/disabilities/document5.html
+++ b/issues/disabilities/document5.html
@@ -52,7 +52,7 @@
       <p>Staff Report Conclusions Regarding Investigations at Mental Institutions<br>
       n.d.</p>
       <p> Senator Weicker's staff led the investigations into mental institution abuse allegations. After compiling a staff report, this reveals the conclusions Weicker's staff would present to the Senate. The staff report would go on to culminate in the passage of S. 415, S. 974, and S. 2345 (The Americans with Disabilities Act).</p>
-      <p>SOURCE: Elliott Box 40.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 540, Folder 3, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/disabilities/5-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
