--- a/issues/politics/document4.html
+++ b/issues/politics/document4.html
@@ -52,6 +52,7 @@
       <p>Weicker Joins Race for the Presidency<br>
       March 12</p>
       <p> In a special feature in the New York Times, reporter Diane Henry discusses the possibility of the “maverick Senator from Connecticut” running for President. In the article, Senator Weicker argues that the Republican Party needs a new voice and a new platform.</p>
+	  <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1550, Folder 9, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/politics/4-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
