--- a/issues/watergate/document11.html
+++ b/issues/watergate/document11.html
@@ -52,7 +52,7 @@
       <p>Watergate Reform Legislation Newspaper Clipping<br>
       July 19, 1974</p>
       <p> An article clipped from the Waterbury American regarding Watergate reform legislation. As a member of the Senate Watergate Committee, Senator Lowell P. Weicker, Jr., oversaw not only the investigation of the political scandal but reform legislation thereafter. Weicker's amendment barred White House staffers from accessing IRS files of those who donated to campaigns. The article continues to explain that Senator Weicker stipulated that the President and his White House staffers would only be granted access to IRS files after submitting a written request. This Watergate reform legislation demonstrates the aftermath of the scandal, as well as Senator Weicker's anger regarding the abuses of Nixon's executive power and holding the executive branch accountable for its illegal and illicit actions.</p>
-      <p>SOURCE: Watergate Box 35.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 2, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/11-1-full.jpg" class="full-width-img" alt=""></a>
 
   </div><!-- /.container -->
