--- a/issues/watergate/document12.html
+++ b/issues/watergate/document12.html
@@ -51,7 +51,7 @@
         <h3>Watergate Reform Continued</h3>
       <p>Weicker Suggests Election for Head of Justice Department<br>
       July 15, 1974</p>
-      <p>SOURCE: Watergate Box 35.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 2, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/12-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
 			<img src="../../images/issues/watergate/7-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
 			<!-- editing note: the second page of this article was originally, and incorrectly, presented as separate document on the page document7.html -->
