--- a/issues/watergate/document14.html
+++ b/issues/watergate/document14.html
@@ -52,7 +52,7 @@
       <p>A Republican’s Conscience<br>
       April 16, 1973</p>
       <p> Senator Weicker submits an Op-Ed about his role in Watergate and how he attempted to protect the Republican Party.</p>
-      <p>SOURCE: Watergate Box 34.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1682, Folder 4, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/14-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
