--- a/issues/watergate/document3.html
+++ b/issues/watergate/document3.html
@@ -52,7 +52,7 @@
       <p>Watergate Notes <br>
       March 30, 1973</p>
       <p> Handwritten notes between Senator Weicker and committee counsel H. William Shure making notes of those in attendance at a banquet. Note reads: &quot;Who was at banquet? Liddy, McCad, Darber, Martney, Gonzalez, Steagan.&quot;</p>
-      <p>SOURCE: Watergate Box 1.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1649, Folder 10, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/3-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
