--- a/issues/watergate/document5.html
+++ b/issues/watergate/document5.html
@@ -68,7 +68,7 @@
         <li>Sam Ervin, Jr.</li>
         <li>John J. Sirica</li>
       </ul>
-<p>SOURCE: Watergate Box 34.</p>
+<p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1682, Folder 4, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/5-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
