--- a/issues/transportation/document3.html
+++ b/issues/transportation/document3.html
@@ -52,7 +52,7 @@
       <p>S. 771: Amtrak and the Northeast Corridor<br>
       March 18, 1987</p>
       <p> S. 771, cosponsored by Senator Lowell Weicker, grants Congress the right to make rail improvements in the Northeast corridor. With the enactment of this bill, Amtrak continued its &quot;operational authority in the Northeast Corridor and … provide[s] funding for high speed capital improvements.&quot; Senator Weicker's support of these improvements ensured Connecticut residents (and other Northeasterners) had reduced travel time between Washington, D.C. and Boston, Massachusetts, and creates a commission to oversee the implementation of improvements and maintenance of the rail system. Weicker, a longtime supporter of Amtrak, remained loyal to public transportation up through the end of his Senatorial tenure.</p>
-      <p>SOURCE: General Staff Files Box 7.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 644, Folder 39, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/transportation/3-1-full.jpg" class="full-width-img" alt="">
       		<img src="../../images/issues/transportation/3-2-full.jpg" class="full-width-img" alt="">
       		<img src="../../images/issues/transportation/3-3-full.jpg" class="full-width-img" alt="">
