--- a/issues/watergate/document13.html
+++ b/issues/watergate/document13.html
@@ -68,7 +68,7 @@
         Malek = Fred Malek<br>
         Ehrl. = John Ehrlichman<br>
       Dailey = Peter Dailey</p>
-      <p>SOURCE: Watergate Box 7.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1655, Folder 1, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/13-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
