--- a/issues/watergate/document4.html
+++ b/issues/watergate/document4.html
@@ -51,7 +51,7 @@
         <h3>Sen. Weicker’s Recommendations</h3>
       <p>Senator Weicker Offers Recommendations on Watergate<br>
       June 30, 1974</p>
-      <p>SOURCE: Watergate Box 35.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 1, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/4-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
