--- a/issues/watergate/document6.html
+++ b/issues/watergate/document6.html
@@ -52,7 +52,7 @@
       <p>Watergate Question Prompts from H. William Shure to Lowell Weicker<br>
       March 30, 1973</p>
       <p> Handwritten questions for Senator Lowell Weicker during the Senate Watergate Committee hearings. This specific card is for the Alfred Baldwin testimony and discusses the idea of a &quot;double-agent&quot; theory.</p>
-      <p>SOURCE: Watergate Box 1.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1649, Folder 10, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/6-1-full.jpg" class="full-width-img" alt="">
 
   </div><!-- /.container -->
