--- a/issues/watergate/document7.html
+++ b/issues/watergate/document7.html
@@ -52,7 +52,7 @@
       <p>Senator Sam Ervin Presents Watergate Bologna<br>
       July 15, 1974</p>
       <p> Newspaper excerpt of Senate Chairman Sam Ervin jokingly presented a bologna loaf as final piece of evidence for Watergate investigations.</p>
-      <p>SOURCE: Watergate Box 35.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 2, Small Special Collections Library, University of Virginia</p>
       		 <img src="../../images/issues/watergate/7-1-full.jpg" class="full-width-img" alt="A guest column in USA Today written by Lowell P. Weicker"> 
 
   </div><!-- /.container -->
