--- a/issues/watergate/document8.html
+++ b/issues/watergate/document8.html
@@ -65,7 +65,7 @@
         <li> 	Mr. LaRue has testified that he and Mr. Maridian interviewed Mr. Liddy that afternoon and reposted back to Mr. Mitchell at 5:30 P.M. Mr. Mitchell spoke to the President for 12 minutes commending at 6:00 P.M. Did the Pres. relate to you the subject matter of that conversation?</li>
         <li>Mr. Dean testified he reviewed the contents of Hunt's safe that day and gave you a description of them, and that you told him to deep six Hunt's briefcase - if you were uninformed as to Mr. Hunt's activities and anxious to find out the fact, why didn't you tell to turn this over to the FBI in the normal course of its investigation with the other contents of the safe?”</li>
       </ol>
-<p>SOURCE: Watergate Box 8.</p>
+<p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1656, Folder 4, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/8-1-full.jpg" class="full-width-img" alt="A guest column in USA Today written by Lowell P. Weicker">
       		<img src="../../images/issues/watergate/8-2-full.jpg" class="full-width-img" alt="A guest column in USA Today written by Lowell P. Weicker">
 
