add and correct citations

--- a/issues/aids/document3.html
+++ b/issues/aids/document3.html
@@ -52,7 +52,7 @@
       <p>Watkins Commission Article in Los Angeles Times<br>
       December 15, 1987</p>
       <p>The article released in LA Times expressed Admiral Watkins’ concerns that heterosexual adults were complacent about the threat of HIV/AIDS. He warned of the deadly disease and the consequences of government inaction.</p>
-      <p>SOURCE: Snider Box 1.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 832, Folder 5, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/aids/3-1-full.jpg" class="full-width-img" alt="A newspaper article by Marlene Cimons featuring a photo of Adm. James D. Watkins">
 
   </div><!-- /.container -->
