--- a/issues/aids/document5.html
+++ b/issues/aids/document5.html
@@ -52,7 +52,7 @@
       <p>Only Morality Will Effectively Prevent AIDS from Spreading<br>
       November 23, 1987</p>
       <p> In a letter to the editor published in the New York Times, Senator Jesse Helms (R-NC) explained his most recent amendment in Congress and responded to allegations from Mayor Koch. Senator Helms explained his viewpoint that abstinence from homosexual activity, sex outside of marriage, and sodomy were the most effective ways to prevent the spread of the AIDS virus, citing studies that claimed condoms were not an effective method to prevent the transmission of HIV/AIDS.</p>
-      <p>SOURCE: Snider Box 1.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 832, Folder 5, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/aids/5-1-full.jpg" class="full-width-img" alt="A letter to the editor written by Jesse Helms, Senator from North Carolina, titled Only Morality Will Effectively Prevent AIDS from Spreading">
 
   </div><!-- /.container -->
