--- a/issues/aids/document6.html
+++ b/issues/aids/document6.html
@@ -53,7 +53,7 @@
       June 2, 1988</p>
       <p> Memo to Senator Weicker from staffer Maureen Byrnes discussing the Watkins Commission final report. Byrnes' memo discusses the highlights of the commission's report. According to the memo, the Watkins Commission report emphasized the damage of &quot;HIV-related discrimination&quot; as it limited the government's ability to control the deadly disease. The commission had both short- and long-term suggestions to approach non-discrimination, including Senator Kennedy's S. 1575. </p>
       <p>The commission also stipulated that, &quot;HIV education in our schools is of vital importance,&quot; and endorsed Senator Weicker's S. 1220 bill on comprehensive AIDS education. Moreover, the commission recommended developing &quot;comprehensive school-based health education&quot; for K through 12. The commission report discussed the responsibilities of federal, state, and local services and recommended how to address the obstacles all face. In addition, the commission called for the establishment of a Public Health Emergency Response System. The report also discusses other issues such as research, testing, counseling, notification, and other various topics.</p>
-      <p>SOURCE: Snider Box 1.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 832, Folder 5, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/aids/6-1-full.jpg" class="full-width-img" alt="A memo from Maureen Byrnes to Senator Weicker">
       		<img src="../../images/issues/aids/6-2-full.jpg" class="full-width-img" alt="A memo from Maureen Byrnes to Senator Weicker">
       		<img src="../../images/issues/aids/6-3-full.jpg" class="full-width-img" alt="A memo from Maureen Byrnes to Senator Weicker">
