--- a/issues/conservation/document2.html
+++ b/issues/conservation/document2.html
@@ -50,7 +50,7 @@
     	<a href="../conservation-documents.html" class="back-link">Documents</a>
         <h3>Weicker Bets on the Oceans</h3>
       <p>Weicker Bets on the Oceans<br>
-      n.d.</p>
+      <i>New York Times</i>, February 13, 1977</p>
       <p> A newspaper piece on Senator Weicker’s involvement with ocean research and advocacy.</p>
       		<img src="../../images/issues/conservation/2-1-full.jpg" class="full-width-img" alt="">
 
