--- a/issues/disabilities/document2.html
+++ b/issues/disabilities/document2.html
@@ -52,7 +52,7 @@
       <p>Weicker Moves to Strengthen Protections for Mentally Ill, Retarded in Rights Cases<br>
       July 24, 1987</p>
       <p> Senatorial press release from Weicker's office detailing the Senator's plan to &quot;provide legal and administrative assistance to mentally retarded/developmentally disabled persons.&quot; After abuse allegations in numerous state mental facilities, Senator Weicker and his staff proposed a bill that &quot;would require [the] Justice [Department] to notify protection and advocacy agencies when a civil rights investigation&quot; begins. This bill is just one of many disabilities initiatives Senator Weicker would fight for and succeed in passing. This press release discusses the bill, the motivations behind the legislation, and Weicker's role in the disabilities arena.</p>
-      <p>SOURCE: Snider Box 30.</p>
+      <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 861, Folder 7, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/disabilities/2-1-full.jpg" class="full-width-img" alt="">
       		<img src="../../images/issues/disabilities/2-2-full.jpg" class="full-width-img" alt="">
 
