correct a bad link from transportation-documents and add content summaries to three Watergate document pages

--- a/issues/transportation-documents.html
+++ b/issues/transportation-documents.html
@@ -64,7 +64,7 @@
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="doc-img-container"><a href="transportation/document4.html"><img src="../images/issues/transportation/4-1-thumb.jpg" class="full-width-img" alt=""></a></div>
-            <p class="full-width-img"><a href="politics/document4.html">New York Times Ration Article</a></p>
+            <p class="full-width-img"><a href="transportation/document4.html">New York Times Ration Article</a></p>
         </div> <!-- /.col-sm-6 col-md-4 col-lg-3 -->
           <!-- Add the extra clearfix for only the required viewport -->
 		  <div class="clearfix visible-lg-block"></div>
