--- a/issues/watergate/document12.html
+++ b/issues/watergate/document12.html
@@ -51,6 +51,7 @@
         <h3>Watergate Reform Continued</h3>
       <p>Weicker Suggests Election for Head of Justice Department<br>
       July 15, 1974</p>
+	  <p>According to this article from Greenwich Time, a Connecticut newspaper, Senator Weicker "said he would draft a resolution for a constitutional amendment to make the office of U.S. attorney general an elective one." The article also notes that Weicker's proposal was at odds with the overall Senate Watergate Committee's recommendation "for the establishment of a permanent office of special prosecutor."</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 2, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/12-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
 			<img src="../../images/issues/watergate/7-1-full.jpg" class="full-width-img" alt="scanned newspaper article">
