--- a/issues/watergate/document4.html
+++ b/issues/watergate/document4.html
@@ -51,6 +51,7 @@
         <h3>Sen. Weicker’s Recommendations</h3>
       <p>Senator Weicker Offers Recommendations on Watergate<br>
       June 30, 1974</p>
+	  <p>In 1974, Senator Weicker released a report on the Watergate affair along with a set of recommendations. According to this article from the Bridgeport Press, "The Weicker recommendations include the banning of all domestic wiretapping and other electronic surveillance, the giving of final power to the U.S. Supreme Court to decide issues involving Presidential privilege with respect to the Congress or federal law enforcement agencies, and to amend the Constitution to make the position of U.S. Attorney General an elective office rather than an appointment by the President."</p>
       <p><i>Papers of Lowell P. Weicker, Jr.</i>, MSS 13900, Box 1683, Folder 1, Small Special Collections Library, University of Virginia</p>
       		<img src="../../images/issues/watergate/4-1-full.jpg" class="full-width-img" alt="">
 
