--- a/issues/watergate/document5.html
+++ b/issues/watergate/document5.html
@@ -50,8 +50,8 @@
     	<a href="../watergate-documents.html" class="back-link">Documents</a>
         <h3>Starring in Watergate</h3>
       <p>The Political Players in Watergate<br>
-      n.d.</p>
-      <p> An article providing a run-down list of all the political players involved in the Watergate scandal and investigation. The list includes:</p>
+      Sidebar to the article "Watergate: Is it a Nixon Waterloo?" by Muriel Dobbin, The Sun Page A1, April 15, 1973</p>
+      <p> A run-down list of all the political players involved in the Watergate scandal and investigation. The list includes:</p>
       <ul>
         <li>President Richard M. Nixon</li>
         <li>John N. Mitchell</li>
